# tiny-tensorrt

./: .gitignore  .gitmodules  CMakeLists.txt  Int8Calibrator.cpp  Int8Calibrator.h  Int8EntropyCalibrator.cpp  Int8EntropyCalibrator.h  PyTrt.cpp  README-CN.md  README.md  TODO.md  Trt.cpp  Trt.h  cnpy.cpp  custom_plugin.md  utils.h
.github/ISSUE_TEMPLATE/: bug_report.md  issue-template.md
cmake/: CUDA_utils.cmake
docs/: CustomPlugin-CN.md  CustomPlugin.md  README-CN.md  TODO.md  UserGuide.md
plugin/: PRELUKernel.cu  PRELUKernel.cuh  PRELUPlugin.cpp  PRELUPlugin.hpp  PluginFactory.cpp  PluginFactory.h  PluginFactory.hpp  README.md  UpSamplePlugin.cu  UpSamplePlugin.hpp  YoloLayerPlugin.cu  YoloLayerPlugin.hpp  plugin_utils.cpp  plugin_utils.h
plugin/CuteSampleDynamicExtPlugin/: CuteSampleDynamicExtPlugin.cpp  CuteSampleDynamicExtPlugin.h
plugin/CuteSamplePlugin/: CuteSamplePlugin.cpp  CuteSamplePlugin.h  README.md
plugin/PReLUPlugin/: PReLUPlugin.cu  PReLUPlugin.h
plugin/PreluPlugin/: PreluPlugin.cu  PreluPlugin.h
plugin/UpSamplePlugin/: UpSamplePlugin.cu  UpSamplePlugin.hpp
plugin/YoloLayerPlugin/: YoloLayerPlugin.cu  YoloLayerPlugin.hpp
sample/yolov3/: CMakeLists.txt  YoloV3.cpp  YoloV3.h  yolo3test.cpp
samples/: CMakeLists.txt
samples/sampleDynamicShape/: CMakeLists.txt  README.md  make_add_op.py  requirements.txt  sampleDynamicShape.cpp
samples/sampleINT8/: CMakeLists.txt  generate_calibration_data.py  sampleINT8.cpp
samples/tinyexec/: CMakeLists.txt  tinyexec.cpp
src/: Int8Calibrator.cpp  Int8Calibrator.h  PyTrt.cpp  Trt.cpp  cnpy.cpp  utils.h
tensorflow/: api_def.proto  cost_graph.proto  function.proto  graph_transfer_info.proto  kernel_def.proto  log_memory.proto  node_def.proto  op_def.proto  remote_fused_graph_execute_info.proto  resource_handle.proto  step_stats.proto  summary.proto  tensor_description.proto  types.proto
test/: generate_calibration_data.py  test.cpp  test.py
tests/: functional_test.sh  release_test.sh
